# clob

./: .clang-format  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  clob_cli.c
include/: CMakeLists.txt
include/clob/: clob.h
src/: CMakeLists.txt  brz.c  brz.h  clob.c  debug_brz.c  debug_brz.h
tests/: CMakeLists.txt  test_char_classes.cpp  test_extended_glob.cpp  test_malformed_pattern.cpp  test_nested_glob.cpp  test_simple_glob.cpp  test_special_char_escaping.cpp
